--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "next-pwa": "^5.6.0",
     "qrcode": "^1.5.4",
     "react": "^18",
-    "react-dom": "^18",
-    "xterm": "^5.3.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
@@ -29,7 +28,6 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/xterm": "^2.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
     "jest": "^30.2.0",
