--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,7 +18,7 @@ RUN npm run build && npm prune --omit=dev
 FROM node:20-bookworm-slim AS runtime
 
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends tmux bash \
+  && apt-get install -y --no-install-recommends tmux bash openssh-client \
   && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
