--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -1,6 +1,7 @@
 services:
   backend:
-    image: ${AOI_TERMINALS_IMAGE_REPO}-backend:${AOI_TERMINALS_TAG:-latest}
+    build: backend
+    image: aoi-terminals-backend:latest
     ports:
       - "3102:3102"
     environment:
@@ -10,10 +11,17 @@ services:
       TERMINAL_LINK_TOKEN_TTL_SECONDS: ${TERMINAL_LINK_TOKEN_TTL_SECONDS:-300}
       TERMINAL_COOKIE_SECURE: ${TERMINAL_COOKIE_SECURE:-0}
       NODE_ENV: ${BACKEND_NODE_ENV:-development}
+      TERMINAL_SSH_TARGET: ${TERMINAL_SSH_TARGET}
+      TERMINAL_SSH_KEY: ${TERMINAL_SSH_KEY}
+    volumes:
+      - ./backend/ssh_key:/app/ssh_key:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
 
   frontend:
-    image: ${AOI_TERMINALS_IMAGE_REPO}-frontend:${AOI_TERMINALS_TAG:-latest}
+    build: frontend
+    image: aoi-terminals-frontend:latest
     depends_on:
       - backend
     ports:
@@ -21,4 +29,3 @@ services:
     environment:
       NODE_ENV: production
     restart: unless-stopped
-
