fix: SSH鍵のパーミッション問題を修正しUID互換性を改善
- SSH鍵のパーミッションを644から600に戻す（SSHの要件に準拠）
- UID 1000以外のユーザー向けにentrypoint.shでSSH鍵の自動コピー機能を追加
- インストール時にUID 1000チェックとyes/no確認を追加
- READMEにUID 1000推奨の説明を追加

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -32,8 +32,12 @@ COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/config ./config
 
+# SSH秘密鍵のパーミッション修正用entrypoint
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
 EXPOSE 3102
 
 USER node
-CMD ["node", "dist/server.js"]
+ENTRYPOINT ["/app/entrypoint.sh"]
 
