--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,7 +34,7 @@ COPY --from=build /app/config ./config
 
 # SSH秘密鍵のパーミッション修正用entrypoint
 COPY entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
+RUN chmod 755 /app/entrypoint.sh
 
 EXPOSE 3102
 
