--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -2,8 +2,7 @@ services:
   backend:
     build: backend
     image: aoi-terminals-backend:latest
-    ports:
-      - "3102:3102"
+    network_mode: "host"
     environment:
       PORT: "3102"
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:3101,http://127.0.0.1:3101}
@@ -11,21 +10,16 @@ services:
       TERMINAL_LINK_TOKEN_TTL_SECONDS: ${TERMINAL_LINK_TOKEN_TTL_SECONDS:-300}
       TERMINAL_COOKIE_SECURE: ${TERMINAL_COOKIE_SECURE:-0}
       NODE_ENV: ${BACKEND_NODE_ENV:-development}
-      TERMINAL_SSH_TARGET: ${TERMINAL_SSH_TARGET}
+      TERMINAL_SSH_TARGET: ${TERMINAL_SSH_TARGET:-localhost}
       TERMINAL_SSH_KEY: ${TERMINAL_SSH_KEY}
     volumes:
       - ./backend/ssh_key:/app/ssh_key:ro
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     restart: unless-stopped
 
   frontend:
     build: frontend
     image: aoi-terminals-frontend:latest
+    network_mode: "host"
     depends_on:
       - backend
-    ports:
-      - "3101:3101"
-    environment:
-      NODE_ENV: production
     restart: unless-stopped
