--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,7 @@ RUN npm run build
 FROM nginx:alpine AS runtime
 
 COPY --from=build /app/dist /usr/share/nginx/html
+RUN chmod -R a+rX /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 3101
